# fenny

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: fenny.rs  lib.rs
src/fenny/: test_fenny.rs
